--- a/app/assets/sass/elements/_checkbox.sass
+++ b/app/assets/sass/elements/_checkbox.sass
@@ -12,7 +12,12 @@
     
 .b-checkbox
   display: flex
+  --p-checkbox-width: 1.25rem
+  --p-checkbox-height: 1.25rem
   label
     flex: 1 1 auto
     display: block
     cursor: pointer
+
+    
+    
